--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.2.1",
     "@hotwired/turbo-rails": "^7.2.5",
+    "@tailwindcss/forms": "^0.5.4",
     "autoprefixer": "^10.4.13",
     "esbuild": "^0.17.6",
     "masonry-layout": "^4.2.2",
