--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "esbuild": "^0.17.6",
     "masonry-layout": "^4.2.2",
     "postcss": "^8.4.21",
+    "quill": "^1.3.7",
     "stimulus-reveal-controller": "^4.1.0",
     "tailwindcss": "^3.2.4"
   },
