--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.2.1",
     "@hotwired/turbo-rails": "^7.2.5",
+    "@rails/actiontext": "^7.0.6",
     "@tailwindcss/forms": "^0.5.4",
     "autoprefixer": "^10.4.13",
     "esbuild": "^0.17.6",
@@ -11,7 +12,8 @@
     "postcss": "^8.4.21",
     "quill": "^1.3.7",
     "stimulus-reveal-controller": "^4.1.0",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "trix": "^2.0.5"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=assets",
